client/src/components/History.module.scss
@import '../styles/index.scss';

.container {
  float: right;
  width: 55%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-sizing: border-box;
  background: #fff;
  .bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.5rem;
    background: $first-color;
    color: #fff;
  }

  .list {
    overflow: auto;
  }

  .filterBar {
    display: flex;
    align-items: center;
    .filterDone {
      display: inline-block;
      width: 1rem;
      height: 1rem;
      margin-right: 1rem;
      background: url('../assets/icons/done.svg') no-repeat center / contain;
    }
  }
}

@include md {
  .container {
    width: 60%;
  }
}

@include sm {
  .container {
    float: none;
    width: 100%;
    height: 100vh;
  }
}

